--- a/hrms-backend-app/pom.xml
+++ b/hrms-backend-app/pom.xml
@@ -79,12 +79,8 @@
 			</exclusions>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-			<version>4.2</version>
-			<scope>test</scope>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.easymock</groupId> <artifactId>easymock</artifactId> 
+			<version>4.2</version> <scope>test</scope> </dependency> -->
 
 
 
