--- a/hrms-backend-app/src/main/resources/application.properties
+++ b/hrms-backend-app/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 average.human.speed=100
+server.servlet.contextPath=/hrms
